test/should_fail/inh_model_001.gm
node class A extends A;
